--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Configure AWS credentials from AWS account
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          role-to-assume: arn:aws:iam::841354735415:role/S3access
+          role-to-assume: arn:aws:iam::841354735415:role/provides3access
           aws-region: ap-south-1
       - run: aws sts get-caller-identity
       - name: Setup Terraform
